force-app/main/default/objects/CanvasEnrollment__c/CanvasEnrollment__c.object-meta.xml
<CustomObject>
    <description>Represents the enrollment of a contact in a course</description>
    <label>Canvas Enrollment</label>
    <nameField>
        <displayFormat>ENRL-{0000}</displayFormat>
        <label>Canvas Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>