force-app/main/default/objects/CanvasEnrollment__c/fields/CanvasCourse__c.field-meta.xml
<CustomField>
    <fullName>CanvasCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Canvas Course</label>
    <referenceTo>CanvasCourse__c</referenceTo>
    <relationshipLabel>Canvas Enrollments</relationshipLabel>
    <relationshipName>CanvasEnrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>