force-app/main/default/objects/CanvasEnrollment__c/fields/CanvasEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>CanvasEnrollmentId__c</fullName>
    <externalId>true</externalId>
    <label>Canvas Enrollment ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>