force-app/main/default/objects/CanvasEnrollment__c/fields/CanvasUser__c.field-meta.xml
<CustomField>
    <fullName>CanvasUser__c</fullName>
    <label>Canvas User</label>
    <referenceTo>CanvasUser__c</referenceTo>
    <relationshipLabel>Canvas Enrollments</relationshipLabel>
    <relationshipName>CanvasEnrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>